--- a/Style Scss/base/_generales.scss
+++ b/Style Scss/base/_generales.scss
@@ -47,14 +47,14 @@ header{
 .div1{
 height: 250px;
 background-color:#ece7e3;
-
+width: 100%;
 }
 
 #div2{
   height: 400px;
   background-color: #fff;
   text-align: center;
-  
+  width: 100%;
   }
 
   #fotoPlaya{
