--- a/Style Scss/base/_generales.scss
+++ b/Style Scss/base/_generales.scss
@@ -88,8 +88,20 @@ width: 100vw;
 
 // CountDown Date
 
-#countdownContainer{
+#divCountDown{
   background-color: black;
   height: 265px;
   width: 100vw;
+  color: #fff;
+  padding-top: 23%;
+  text-align: center;
+}
+
+#countdownContainer{
+  font-size: xx-large;
+  margin-bottom: 0;
+}
+
+#divDiasHoras{
+  margin-left: 31%;
 }
