--- a/estilos/style.css
+++ b/estilos/style.css
@@ -73,8 +73,20 @@ header {
   right: -121px;
 }
 
-#countdownContainer {
+#divCountDown {
   background-color: black;
   height: 265px;
   width: 100vw;
+  color: #fff;
+  padding-top: 23%;
+  text-align: center;
+}
+
+#countdownContainer {
+  font-size: xx-large;
+  margin-bottom: 0;
+}
+
+#divDiasHoras {
+  margin-left: 31%;
 }/*# sourceMappingURL=style.css.map */
