--- a/Style Scss/base/_generales.scss
+++ b/Style Scss/base/_generales.scss
@@ -102,6 +102,24 @@ width: 100vw;
   margin-bottom: 0;
 }
 
+#divTiempoRestanteEnNumeros{
+  font-size: xx-large;
+}
+
+.estilosCountdown{
+  margin-bottom: 0;
+  
+}
+
 #divDiasHoras{
-  margin-left: 31%;
+  margin-left: -2%;
+  font-weight: 100;
+}
+
+#pSegundos{
+  margin-left: 35%;
+}
+
+#pDias{
+  margin-left: -28%;
 }
