--- a/estilos/style.css
+++ b/estilos/style.css
@@ -87,6 +87,23 @@ header {
   margin-bottom: 0;
 }
 
+#divTiempoRestanteEnNumeros {
+  font-size: xx-large;
+}
+
+.estilosCountdown {
+  margin-bottom: 0;
+}
+
 #divDiasHoras {
-  margin-left: 31%;
+  margin-left: -2%;
+  font-weight: 100;
+}
+
+#pSegundos {
+  margin-left: 35%;
+}
+
+#pDias {
+  margin-left: -28%;
 }/*# sourceMappingURL=style.css.map */
