--- a/Style Scss/base/_generales.scss
+++ b/Style Scss/base/_generales.scss
@@ -129,7 +129,7 @@ width: 100vw;
 // Seccion Foto Fiesta, Horario y Mapa
 
 #divFiestaWhite{
-  height: 170px;
+  height: 185px;
   width: 100%;
   background-color: #fff;
 }
@@ -146,14 +146,15 @@ width: 100vw;
 
 #yatchClubPic{
   position: absolute;
-  top: 11%;
-    left: 24%;
+  top: 7%;
+    left: 22%;
+    width: 60%;
 }
 
 #pFiesta{
   font-family: 'Comforter Brush', sans-serif;
   font-size: xxx-large;
-  padding-top: 38%;
+  padding-top: 40%;
 }
 
 #pOrganizador{
