--- a/estilos/style.css
+++ b/estilos/style.css
@@ -112,7 +112,7 @@ header {
 }
 
 #divFiestaWhite {
-  height: 170px;
+  height: 185px;
   width: 100%;
   background-color: #fff;
 }
@@ -129,14 +129,15 @@ header {
 
 #yatchClubPic {
   position: absolute;
-  top: 11%;
-  left: 24%;
+  top: 7%;
+  left: 22%;
+  width: 60%;
 }
 
 #pFiesta {
   font-family: "Comforter Brush", sans-serif;
   font-size: xxx-large;
-  padding-top: 38%;
+  padding-top: 40%;
 }
 
 #pOrganizador {
