--- a/Style Scss/base/_generales.scss
+++ b/Style Scss/base/_generales.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: 0;
   }
 
  body{
@@ -179,4 +180,36 @@ width: 100vw;
   &:hover{
     color: rgb(241, 241, 133);
 }
+}
+
+//Seccion #Mural de Fotos
+
+#divMuralFotos{
+  height: 302px;
+    width: 100%;
+    background-color: #fff;
+    flex-direction: column;
+}
+
+.aMuralFotos{
+  background-color: black;
+    color: #fff;
+    border-radius: 26px;
+    text-decoration: none;
+    padding: 2% 5%;
+    width: fit-content;
+    justify-self: center;
+    align-self: center;
+
+    &:hover{
+      color: rgb(241, 241, 133);
+  }
+}
+
+#pCamiYFede{
+  background-color: #ece7e3;
+  margin-left: 13%;
+    margin-right: 17%;
+    padding: 1%;
+    font-weight: 200;
 }
