--- a/Style Scss/base/_generales.scss
+++ b/Style Scss/base/_generales.scss
@@ -353,3 +353,19 @@ left:32%;
 #divFotosHombres{
   flex-direction: column;
 }
+
+#divFotosMujeres{
+  flex-direction: column;
+}
+
+#imgMujer1{
+  width: 44%;
+  margin-bottom: 3%;
+  align-self: center;
+  margin-left: 9%;
+}
+
+#imgMujer2{
+  width: 97%;
+    align-self: center;
+}
