--- a/Style Scss/base/_generales.scss
+++ b/Style Scss/base/_generales.scss
@@ -67,6 +67,7 @@ width: 100vw;
   }
 
 #pFecha{
+  text-decoration: none;
   position: absolute;
   bottom: 37px;
     left: -6px;
@@ -76,6 +77,7 @@ width: 100vw;
     font-family: "Comforter Brush", sans-serif;
     width: 100%;
     padding-top: 10%;
+    
 }
 
 #Capa_1{
